Add new aliases

--- a/git/alias.conf
+++ b/git/alias.conf
@@ -2,6 +2,7 @@ alias gpu='git pu'
 alias ts='tig status'
 alias gmg='git merge --no-ff'
 alias coma='git commit --amend'
+alias pulo='git pull origin'
 
 # vim: ft=sh
 
