--- a/zsh/alias.conf
+++ b/zsh/alias.conf
@@ -20,6 +20,8 @@ alias %%='eval "sudo $(fc -ln -1)"'
 alias dh='dirs -v'
 alias -- -='cd -'
 
+alias cmp='composer.phar'
+
 cd() {
   if [[ "$1" =~ ^\\.{1,}$ ]]; then
     for (( i=0; i<$(( ${#1} - 1 )); i++ )); do
@@ -42,4 +44,6 @@ alias po='popd'
 # Super user
 alias _='sudo'
 alias please='sudo'
+
+alias phpid='php -r "echo uniqid().PHP_EOL;"'
 
