--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,9 +1,10 @@
 FROM ubuntu
 
-RUN apt-get update && apt-get install -y git wget vim
+RUN apt-get update && apt-get install -y git wget vim zsh
 
 WORKDIR /root
 
+ADD test/antibody /bin/antibody
 ADD setup.sh /root
 RUN chmod u+x /root/setup.sh
 
