--- a/dot_config/terminator/config
+++ b/dot_config/terminator/config
@@ -5,14 +5,17 @@
 [keybindings]
 [profiles]
   [[default]]
-    background_darkness = 0.9
-    background_type = transparent
-    font = FiraCode Nerd Font Medium 12
+    background_darkness = 0.7
+    background_type = image
+    background_image = /home/fgrosse/.local/share/chezmoi/pictures/looking-far-away.jpg
+    background_image_mode = scale_and_crop
+    font = FiraCode Nerd Font Medium 13
     scrollbar_position = hidden
     scrollback_infinite = True
     use_system_font = False
     title_hide_sizetext = True
-    title_transmit_bg_color = "#26a269"
+    title_transmit_bg_color = "#9141ac"
+    title_inactive_bg_color = "#613583"
     title_use_system_font = False
     title_font = FiraCode Nerd Font Medium 9
   [[outside]]
